packaged/objects/Medicine__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether the medicine can be used, i.e. In date</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Batch_No__c</fullName>
        <inlineHelpText>The batch number of the medicine</inlineHelpText>
        <label>Batch No.</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <inlineHelpText>The category of the medicine</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Anthelmintic</fullName>
                </value>
                <value>
                    <fullName>Anti-bacterial</fullName>
                </value>
                <value>
                    <fullName>Antibiotic</fullName>
                </value>
                <value>
                    <fullName>Antiemetic</fullName>
                </value>
                <value>
                    <fullName>AntiInflammatory</fullName>
                </value>
                <value>
                    <fullName>Antimicrobial</fullName>
                </value>
                <value>
                    <fullName>Antimicrobial/Anti Inflammatory</fullName>
                </value>
                <value>
                    <fullName>Antimicrobial/Anti Inflammatory; Antimycotic</fullName>
                </value>
                <value>
                    <fullName>Antimicrobial/Antimycotic</fullName>
                </value>
                <value>
                    <fullName>Antimicrobial intramammary</fullName>
                </value>
                <value>
                    <fullName>Antimicrobial intramammary/Anti Inflammatory</fullName>
                </value>
                <value>
                    <fullName>Antimycotic</fullName>
                </value>
                <value>
                    <fullName>Anti-parasitic</fullName>
                </value>
                <value>
                    <fullName>Antiprotozoal</fullName>
                </value>
                <value>
                    <fullName>Antiprotozoal anticoccidial</fullName>
                </value>
                <value>
                    <fullName>Antiprotozoal coccidiostat</fullName>
                </value>
                <value>
                    <fullName>Anti-seizure</fullName>
                </value>
                <value>
                    <fullName>Antiseptic</fullName>
                </value>
                <value>
                    <fullName>Antisera</fullName>
                </value>
                <value>
                    <fullName>Cardio Vascular</fullName>
                </value>
                <value>
                    <fullName>Cardio Vascular/Respiratory Agent</fullName>
                </value>
                <value>
                    <fullName>Cardio Vascular ACE inhibitor</fullName>
                </value>
                <value>
                    <fullName>Cardio Vascular diuretic</fullName>
                </value>
                <value>
                    <fullName>Cytokine</fullName>
                </value>
                <value>
                    <fullName>Decongestant</fullName>
                </value>
                <value>
                    <fullName>Diagnostic Preparation</fullName>
                </value>
                <value>
                    <fullName>Diluent</fullName>
                </value>
                <value>
                    <fullName>Ectoparasiticide</fullName>
                </value>
                <value>
                    <fullName>Emetic</fullName>
                </value>
                <value>
                    <fullName>Endectocide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Any comments related to the medicine or its use</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Delivery_Method__c</fullName>
        <inlineHelpText>How the Medicine is normally administered</inlineHelpText>
        <label>Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Coated_Tablet</fullName>
                    <label>Coated - Tablet</label>
                </value>
                <value>
                    <fullName>Dissolvable - Tablet</fullName>
                </value>
                <value>
                    <fullName>Drops</fullName>
                </value>
                <value>
                    <fullName>Gel</fullName>
                </value>
                <value>
                    <fullName>Injected - Solution</fullName>
                </value>
                <value>
                    <fullName>Ointment_Cream</fullName>
                    <label>Ointment/Cream</label>
                </value>
                <value>
                    <fullName>Paste</fullName>
                </value>
                <value>
                    <fullName>Poultice</fullName>
                </value>
                <value>
                    <fullName>Powder</fullName>
                </value>
                <value>
                    <fullName>Shampoo</fullName>
                </value>
                <value>
                    <fullName>Spray</fullName>
                </value>
                <value>
                    <fullName>Syrup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Manufacturer/Brand or Supplier of the medicine</inlineHelpText>
        <label>Manufacturer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Medicine_Manufacturer__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Medicines</relationshipLabel>
        <relationshipName>Medicines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Medicine_Name__c</fullName>
        <inlineHelpText>The name of the medicine</inlineHelpText>
        <label>Medicine Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Medicine</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MEDCN{00000}</displayFormat>
        <label>Medicine Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medicines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>